CEA-708 subtitles not detected when service does not start in first frame

  1. Set Input / Codecs -> Preferred Closed Captions decoder to CEA 708 to enable parsing CEA-708 captions.
  2. Open the attached file(s).

File descriptions (uploaded to streams.videolan.org):

  • define-window-style4-pen5.mp4: uses CEA-708 roll-up captions with predefined window style 4 and pen style 5; first DTVCC packet is at 00:01.967 seconds.
  • define-window-style4-pen5-frame0.mp4: same as above, but with the first DTVCC packet at 00:00.00 seconds.

Expected behaviour:

  • For both files, VLC should offer DTVCC Closed Captions 1, and report CEA-708 captions in codec info.

Actual behaviour:

  • Only define-window-style4-pen5-frame0.mp4 reports CEA-708 captions.
  • define-window-style4-pen5.mp4 reports CEA-608 captions, and never gives an option to choose DTVCC captions. The CEA-708 subtitle track is completely inaccessible.

VLC also doesn't interpret the predefined window and pen styles correctly. I opened #26160 (closed) about this.

mediainfo output is the same for both files:

General
Complete name                            : define-window-style4-pen5.mp4
Format                                   : MPEG-4
Format profile                           : Base Media
Codec ID                                 : isom (isom/iso2/avc1/mp41)
File size                                : 25.7 MiB
Duration                                 : 1 min 14 s
Overall bit rate mode                    : Variable
Overall bit rate                         : 2 892 kb/s
Writing application                      : Lavf58.29.100

Video
ID                                       : 1
Format                                   : AVC
Format/Info                              : Advanced Video Codec
Format profile                           : High@L4
Format settings                          : CABAC / 4 Ref Frames
Format settings, CABAC                   : Yes
Format settings, Reference frames        : 4 frames
Codec ID                                 : avc1
Codec ID/Info                            : Advanced Video Coding
Duration                                 : 1 min 14 s
Bit rate                                 : 2 763 kb/s
Width                                    : 1 920 pixels
Height                                   : 1 080 pixels
Display aspect ratio                     : 16:9
Frame rate mode                          : Variable
Frame rate                               : 30.000 FPS
Minimum frame rate                       : 29.412 FPS
Maximum frame rate                       : 30.303 FPS
Color space                              : YUV
Chroma subsampling                       : 4:2:0
Bit depth                                : 8 bits
Scan type                                : Progressive
Bits/(Pixel*Frame)                       : 0.044
Stream size                              : 24.6 MiB (96%)
Codec configuration box                  : avcC

Audio
ID                                       : 2
Format                                   : AAC LC
Format/Info                              : Advanced Audio Codec Low Complexity
Codec ID                                 : mp4a-40-2
Duration                                 : 1 min 14 s
Bit rate mode                            : Variable
Bit rate                                 : 119 kb/s
Maximum bit rate                         : 128 kb/s
Channel(s)                               : 2 channels
Channel layout                           : L R
Sampling rate                            : 44.1 kHz
Frame rate                               : 43.066 FPS (1024 SPF)
Compression mode                         : Lossy
Stream size                              : 1.06 MiB (4%)
Default                                  : Yes
Alternate group                          : 1

Text
ID                                       : 1-1
Format                                   : EIA-708
Muxing mode                              : SCTE 128 / DTVCC Transport
Muxing mode, more info                   : Muxed in Video #1
Duration                                 : 1 min 14 s
Bit rate mode                            : Constant
Stream size                              : 0.00 Byte (0%)

Environment:

  • VLC version: 3.0.16
  • Platform: win64
Edited by Michael Farrell