input: es_out: force captions mode to be exclusive

Captions used to fallback on 608 when 708 is undetected, but
as probing can be asynchronous, we have no way to deal with
this properly. (and re-updgrade to 708 anyway)

refs #26159